# fearnworks-backend-starter

./: .envtemplate  .gitignore  README.md  docker-compose.yml
.github/workflows/: codeql.yml  fortify.yml
backend/: Dockerfile
backend/app/: .envtemplate  prestart_test.sh  pyproject.toml  run.sh  testdb.db
backend/app/alembic/: env.py
backend/app/alembic/versions/: 28efa55c2847_.py
backend/app/app/: backend_pre_start.py  main.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: auth.py
backend/app/app/core/: auth.py  config.py  security.py
backend/app/app/crud/: base.py  crud_user.py
backend/app/app/db/: base_class.py  init_db.py  session.py
backend/app/app/models/: user.py
backend/app/app/schemas/: __init__.py  user.py
backend/app/app/templates/: index.html
backend/app/app/tests/: deps_test.py
dash-frontend/: Dockerfile  main.py  multipage_report.py  multipage_report_builder.py  requirements.txt
dash-frontend/assets/: base.css
dash-frontend/multi-page-report/: __init__.py  scatter_graphs.py
dash-frontend/multi_page_report/: __init__.py  scatter_graphs.py  style-manager.py
dash-frontend/multi_page_report/pages/: __init__.py  anomaly_analysis.py  bond_analysis_page.py  cover_page.py  forecast_page.py  global_market_page.py  graph_and_block_quote_page.py  page_utils.py  rig_to_yield_page.py  sales_table_page.py  summary_page.py  supply_analysis_page.py
dash-frontend/multi_page_report/report-example/: requirements.txt
(+2 files in other folders)
